make small changes

--- a/mainpg.html
+++ b/mainpg.html
@@ -1188,12 +1188,9 @@
                                 famous waterfalls on rocks and tiny droplets are sprinkled…</p>
                         </div>
                     </div>
-
-
-
-                    <button id="submit-btn" class=" btn btn-primary">Submit</button>
-
+                </span>
             </section>
+                    <button id="submit-btn" class=" btn btn-primary">Submit</button>
 
 
 
