--- a/mainpg.html
+++ b/mainpg.html
@@ -142,6 +142,7 @@
         </nav>
     </header>
     <main class="main">
+        
         <section id="main" class="section1">
             <div class="preference">
                 <div class="options">
@@ -1326,7 +1327,7 @@
             </span>
         </section>
 
-                <section id="Tiruchirappalli" class="district container-fluid ">
+            <section id="Tiruchirappalli" class="district container-fluid ">
             <span id="Tiruchirappalli" class="row row-container d-flex flex-row justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
@@ -1364,6 +1365,92 @@
                 </div>
             </span>
         </section>
+
+
+        <section id="Kanyakumari" class="district container-fluid ">
+    <span id="Kanyakumari" class="row row-container d-flex flex-row justify-content-center">
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Bhagavathi Amman Temple- Kanniyakuamri</h5>
+                <p class="card-text">Kanniyakumari derives its name from from Goddess Kanniyakumari Amman, the presiding deity of the area. The most prominent temple, the Kumari Amman, is dedicated to the goddess Parvathi as a virgin.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Guganathaswamay Temple</h5>
+                <p class="card-text">Guganathaswamy Temple is a 1000 year old temple and is said to have been built by the King Raja Raja Chola. T</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Athikesava Perumal Temple- Thiruvattar</h5>
+                <p class="card-text">Thiruvattar is located about 60 kilometers away from kanniyakumari and boasts of a temple with fine architecture.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Mandaikadu Bhagavathi Amman Temple</h5>
+                <p class="card-text">Sri Bhagavathi Amman Temple is an important temple situated near to Nagercoil – colachel State highway in Mandaikadu .</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Thanumalaiyan Temple – Sucindram</h5>
+                <p class="card-text">Suchindrum is a small village about 12 km. from Kanniyakumari and about seven kilometres from Nagercoil. </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Nagaraja Temple – Nagercoil</h5>
+                <p class="card-text">Arulmigu Nagaraja Thirukkoil is one of the temples of associated and unassociated temples of Suseendram. </p>
+            </div>
+        </div>
+                <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Ayya Vaikundar Temple- Swamithope</h5>
+                <p class="card-text">Swamithoppu is a small village about 11 km. from Kanyakumari.  Swamithoppu, formely known as Poovandanthoppu, is situated in Thamarakkulam village of Nanchi naadu in Kanyakumari District.</p>
+            </div>
+        </div>
+                <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Our lady Ransom Church – Kanniyakumari</h5>
+                <p class="card-text">The Kanyakumari Parish almost coincides with the civil village of Kanyakumari. Archeological evidences suggest that St. Thomas, a disciple of Jesus Christ visited this soil.</p>
+            </div>
+        </div>
+                <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">St. Xavier Church – Kottar</h5>
+                <p class="card-text"> St.Xavier an outstanding and dedicated priest visited the coastal areas of Tamil Nadu from Goa, he never missed the opportunity of visiting Kottar in Kanniyakumari district which was a celebrated commercial centre at that time. During his stay at Kottar, he used to worship St. Mary in the small temple.</p>
+            </div>
+        </div>
+                <div class="card" style="width: 18rem;">
+            <img src="/Toorist img/ariyalur/karaivetti bird sanctuary.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <input type="checkbox" name="" id="">
+                <h5 class="card-title">Peer Mohammed Durha, Thuckalay</h5>
+                <p class="card-text">There is a durha named ‘Peer Mohamed Oliyullah Durha’ at Thuckalay named after the great philosopher Mohamed Appa, who was born in Tenkasi of Tirunelveli District.</p>
+            </div>
+        </div>
+    </span>
+</section>
 
                     <button id="submit-btn" class=" btn btn-primary">Submit</button>
 
