added cost for distance

--- a/mainpg.html
+++ b/mainpg.html
@@ -143,7 +143,7 @@
     </header>
 
 
-    
+
     <main class="main">
         
         <section id="main" class="section1">
@@ -1454,10 +1454,11 @@
         </div>
     </span>
 </section>
+</section>
 
 <section id="price">
     <span>
-        <h3 id="rupee"></h3>
+        <h3 id="rupee" style="text-align: center;">hellow</h3>
     </span>
 </section>
 
