align button center

--- a/mainpg.html
+++ b/mainpg.html
@@ -1462,7 +1462,10 @@
     </span>
 </section>
 
+    <div class="btn-container">
                     <button id="submit-btn" onclick="price()" class=" btn btn-primary">Submit</button>
+
+    </div>
 
 
 
