added no of people

--- a/mainpg.html
+++ b/mainpg.html
@@ -249,7 +249,8 @@
                     <option value="Viluppuram">Viluppuram</option>
                     <option value="Virudhunagar">Virudhunagar</option>
                 </select>
-                <input type="tel" name="" id="" placeholder="No of People">
+                <input type="tel" name="" id="NoOfPeople" placeholder="No of People">
+                <input type="date" name="" id="">
             </div>
             <div class="btn1">
                 <button class="btn btn-primary btn-lg" onclick="search() " type="submit">Search</button>
