--- a/mainpg.html
+++ b/mainpg.html
@@ -1470,6 +1470,8 @@
 
     </main>
 
+
+    <script src="index.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/textfit/2.4.0/textFit.min.js'></script>
           <!-- Script JS -->
