made some changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
             <li class="indLogo"></li>
         </ul>
-        <nav class=" navbar-dark bg-dark" id="sidebar">
+        <nav class=" navbar bg-body-teritary" id="sidebar">
             <div class="container-fluid">
               <button class="navbar-toggler"  type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
