--- a/index.html
+++ b/index.html
@@ -242,7 +242,19 @@
       <!-- END EDMO HTML (Happy Coding!)-->
    </section>
     <footer>
-      <div></div>
+      <div>
+        <h4>Thank you for visiting our website</h4>
+        <p>made for hackethon</p>
+        <ul>
+          <li><a class="a-color" href="/index.html">Home</a></li>
+          <li><a class="a-color" href="/mainpg.html">Main</a></li>
+        <li><a class="a-color" href="/direction_map/index.html">map</a></li>
+        <li><a class="a-color" href="/login.html">Login</a></li>
+        
+        
+        </ul>
+
+      </div>
     </footer>
 
     <script src='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js'></script>
