--- a/mainpg.html
+++ b/mainpg.html
@@ -246,7 +246,7 @@
                     <option value="Viluppuram">Viluppuram</option>
                     <option value="Virudhunagar">Virudhunagar</option>
                 </select>
-                <input type="tel" name="" id="NoOfPeople" value="1" placeholder="No of People">
+                <input type="tel" name="" id="NoOfPeople" required placeholder="No of People">
                 <input type="date" name="" id="">
             </div>
             <div class="btn1">
